# Chloee-CrossFrame-SE-LV1-updating-

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml
docs/: api-reference.md  deployment-guide.md  personality-framework.md
examples/: advanced-usage.md  basic-deployment.md
legal/: copyright-notice.md  licensing-terms.md
src/chloee_crossframe_se/: __init__.py
src/config/: semantic_fingerprint.json
src/message-pairs/: anthropic-console-tests.md
src/system-prompt/: chloee-v5.0.md
