[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chloee-crossframe-se"
version = "1.0.0"
description = "Chloee Cross-Frame Semantic Integration Module - 智能主體跨聊天框部署系統"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "尚暐棋", email = "encoreg60305@gmail.com"}
]
maintainers = [
    {name = "尚暐棋", email = "encoreg60305@gmail.com"}
]
keywords = [
    "ai", "chatbot", "semantic", "personality", "cross-platform", 
    "intelligent-agent", "emotional-analysis", "music-recognition"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "pydantic>=2.0.0",
    "json5>=0.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0"
]
testing = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mock>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/encoreg60305/Chloee-CrossFrame-SE-LV1-updating"
Repository = "https://github.com/encoreg60305/Chloee-CrossFrame-SE-LV1-updating"
Documentation = "https://github.com/encoreg60305/Chloee-CrossFrame-SE-LV1-updating/tree/main/docs"
"Bug Reports" = "https://github.com/encoreg60305/Chloee-CrossFrame-SE-LV1-updating/issues"

[project.scripts]
chloee-test = "src.test_chloee_prompt:main"
chloee-deploy = "src.deployment:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
